project(binomial_pricer_exercises)

set(exe1 exercise01)
add_executable(${exe1} ${exe1}.cpp)

set(exe2 exercise02)
add_executable(${exe2} ${exe2}.cpp)

set(exe3 exercise03)
add_executable(${exe3} ${exe3}.cpp)

set(exe4 exercise04)
add_executable(${exe4} ${exe4}.cpp)

set(exe5 exercise05)
add_executable(${exe5} ${exe5}.cpp)

set(exe6 exercise06)
add_executable(${exe6} ${exe6}.cpp)

set(exe7 exercise07)
add_executable(${exe7} ${exe7}.cpp)

set(exe8 exercise08)
add_executable(${exe8} ${exe8}.cpp)

set(exe9 exercise09)
add_executable(${exe9} ${exe9}.cpp)

set(exe10 exercise10)
add_executable(${exe10} ${exe10}.cpp)

set(exe11 exercise11)
add_executable(${exe11} ${exe11}.cpp)