project(finite_difference_methods_exercises)

MESSAGE(STATUS "Exercise 6.1 is in the notes.")

set(exe6_2 exercise6_2)
add_executable(${exe6_2} ${exe6_2}.cpp)

set(exe6_3 exercise6_3)
add_executable(${exe6_3} ${exe6_3}.cpp)

set(exe6_4 exercise6_4)
add_executable(${exe6_4} ${exe6_4}.cpp)

set(exe6_5 exercise6_5)
add_executable(${exe6_5} ${exe6_5}.cpp)

set(exe6_6 exercise6_6)
add_executable(${exe6_6} ${exe6_6}.cpp)

set(exe6_7 exercise6_7)
add_executable(${exe6_7} ${exe6_7}.cpp)

set(exe6_8 exercise6_8)
add_executable(${exe6_8} ${exe6_8}.cpp)

set(exe6_9 exercise6_9)
add_executable(${exe6_9} ${exe6_9}.cpp)