project(monte_carlo_methods_exercises)

set(exe5_1 exercise5_1)
add_executable(${exe5_1} ${exe5_1}.cpp)

set(exe5_2 exercise5_2)
add_executable(${exe5_2} ${exe5_2}.cpp)

set(exe5_3 exercise5_3)
add_executable(${exe5_3} ${exe5_3}.cpp)

set(exe5_4 exercise5_4)
add_executable(${exe5_4} ${exe5_4}.cpp)

set(exe5_5 exercise5_5)
add_executable(${exe5_5} ${exe5_5}.cpp)

set(exe5_6 exercise5_6)
add_executable(${exe5_6} ${exe5_6}.cpp)

set(exe5_7 exercise5_7)
add_executable(${exe5_7} ${exe5_7}.cpp)


