project(non_linear_solvers_exercises)

set(exe4_1 exercise4_1)
add_executable(${exe4_1} ${exe4_1}.cpp)

set(exe4_2 exercise4_2)
add_executable(${exe4_2} ${exe4_2}.cpp)

set(exe4_3 exercise4_3)
add_executable(${exe4_3} ${exe4_3}.cpp)

set(exe4_4 exercise4_4)
add_executable(${exe4_4} ${exe4_4}.cpp)


